# data_cache

./: Cargo.toml  alluxio_config.toml  build.rs
cache_jni/java_lib/: pom.xml
cache_jni/java_lib/src/main/java/alluxio/sdk/file/cache/: NativeCacheManager.java  NativeCacheManagerOptions.java
cache_jni/java_lib/src/main/resources/nativelib/Linux-amd64/: liballuxio_jni_rust_lib.d
cache_jni/java_lib/src/main/resources/nativelib/Mac_OS_X-aarch64/: liballuxio_jni_rust_lib.dylib
cache_jni/java_lib/src/test/java/alluxio/sdk/file/cache/: NativeCacheManagerTest.java
cache_jni/rust_lib/: Cargo.toml
cache_jni/rust_lib/src/: lib.rs
client/: Cargo.toml
client/src/: client_lib.rs  client_main.rs  cmds.rs
client/src/cmds/: cat.rs  location.rs  ls.rs  stat.rs
client/src/file/: alluxio_file_system.rs  common.rs  mod.rs
common/: Cargo.toml
common/src/: common_lib.rs  exception.rs  settings.rs
grpc/: Cargo.toml  build.rs
grpc/proto/: block_worker.proto  file_system_master.proto
grpc/src/: auth.rs  file_system_master.rs  gen.rs  grpc_client.rs  grpc_lib.rs
proto/: journal_file.proto  protocol.proto  sasl_server.proto  shared_acl.proto
src/client/: client.rs  settings.rs
src/worker/: worker.rs
worker/: Cargo.toml
