[package]
name = "data_cache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]] # Bin to run the data cache gRPC worker
name = "data-cache-worker"
path = "src/worker/worker.rs"

[[bin]] # Bin to run the data cache gRPC client
name = "data-cache-client"
path = "src/client/client.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tokio-stream = "0.1"

async-stream = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"

[build-dependencies]
tonic-build = "0.7"
