[package]
name = "alluxio-client"
version = "0.1.0"
edition = "2021"

[[bin]] # Bin to run the data cache gRPC client
name = "alluxio-client-cli"
path = "src/client_main.rs"

[lib]
name = "alluxio_client"
crate-type = ["cdylib"]
path = "src/client_lib.rs"

[dependencies]
alluxio-common = { path = "../common" }
alluxio-grpc = { path = "../grpc" }

structopt = "0.3"
tabled = "0.8.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "sync", "time"] }