[package]
name = "alluxio_grpc"
version = "0.1.0"
edition = "2021"


[lib]
name = "alluxio_grpc"
crate-type = ["lib"]
path = "src/grpc_lib.rs"

[dependencies]
tonic = "0.7"
prost = "0.10"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-core = "0.3"
futures-util = "0.3"
tokio = { version = "1.0", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
tokio-stream = "0.1"

async-stream = "0.2"
serde = { version = "1.0.140", features = ["derive"] }
serde_derive = "1.0.140"
serde_json = "1.0"
rand = "0.7"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }

[build-dependencies]
tonic-build = "0.7"
