[package]
name = "alluxio_jni_rust_lib"
version = "0.1.0"
edition = "2021"


[features]

# enables setting/checking magic strings
magic = []

# metafeatures
debug = ["magic"]

# default set of enabled features
default = []

[dependencies]
jni = "0.19.0"
segcache = { git = "https://github.com/beinan/pelikan", branch="dep_fix", package = "seg" }


[lib]
crate_type = ["cdylib"]

